--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,14 +13,23 @@ jobs:
         distribution: 'temurin'
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
-    - name: Download Gradle wrapper
-      run: |
-        wget -q https://services.gradle.org/distributions/gradle-8.0-bin.zip -O gradle.zip
-        unzip -q gradle.zip
-        ./gradle-8.0/bin/gradle wrapper --gradle-version=8.0 --distribution-type=bin
-        chmod +x gradlew
     - name: Build APK
-      run: ./gradlew assembleDebug
+      run: |
+        mkdir -p gradle/wrapper
+        cat > gradle/wrapper/gradle-wrapper.properties << 'PROPS'
+distributionBase=GRADLE_USER_HOME
+distributionPath=wrapper/dists
+distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
+zipStoreBase=GRADLE_USER_HOME
+zipStorePath=wrapper/dists
+PROPS
+        cat > gradlew << 'GRADLEW'
+#!/bin/sh
+exec java -jar "$( dirname "$0" )/gradle/wrapper/gradle-wrapper.jar" "$@"
+GRADLEW
+        wget -q https://raw.githubusercontent.com/gradle/gradle/v8.0.0/gradle/wrapper/gradle-wrapper.jar -O gradle/wrapper/gradle-wrapper.jar
+        chmod +x gradlew
+        ./gradlew assembleDebug
     - uses: actions/upload-artifact@v4
       with:
         name: Oscilloscope-APK
