--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,23 +13,12 @@ jobs:
         distribution: 'temurin'
     - name: Setup Android SDK
       uses: android-actions/setup-android@v3
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        gradle-version: '8.0'
     - name: Build APK
-      run: |
-        mkdir -p gradle/wrapper
-        cat > gradle/wrapper/gradle-wrapper.properties << 'PROPS'
-distributionBase=GRADLE_USER_HOME
-distributionPath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-8.0-bin.zip
-zipStoreBase=GRADLE_USER_HOME
-zipStorePath=wrapper/dists
-PROPS
-        cat > gradlew << 'GRADLEW'
-#!/bin/sh
-exec java -jar "$( dirname "$0" )/gradle/wrapper/gradle-wrapper.jar" "$@"
-GRADLEW
-        wget -q https://raw.githubusercontent.com/gradle/gradle/v8.0.0/gradle/wrapper/gradle-wrapper.jar -O gradle/wrapper/gradle-wrapper.jar
-        chmod +x gradlew
-        ./gradlew assembleDebug
+      run: gradle assembleDebug
     - uses: actions/upload-artifact@v4
       with:
         name: Oscilloscope-APK
